--- a/docker-compose/conf/apache2.conf
+++ b/docker-compose/conf/apache2.conf
@@ -1,4 +1,4 @@
-ServerName localhost
+ServerName ${APACHE_SERVER_IPv4_HOST}
 #
 # The accept serialization lock file MUST BE STORED ON A LOCAL DISK.
 #
