--- a/docker-compose/conf/web-app.conf
+++ b/docker-compose/conf/web-app.conf
@@ -1,10 +1,10 @@
-<VirtualHost *:8282>
+<VirtualHost *:${APACHE_SERVER_IPv4_PORT}>
   ServerAdmin vershininyn@yandex.ru
-  ServerName web-app
+  ServerName ${APACHE_SERVER_IPv4_HOST}
   #ServerAlias www.app
-  DocumentRoot /var/www/web-app
+  DocumentRoot ${APACHE_SERVER_DOCUMENT_ROOT}
 
- <Directory /var/www/web-app>
+ <Directory ${APACHE_SERVER_DOCUMENT_ROOT}>
     Options FollowSymLinks
     AllowOverride None
     AddDefaultCharset utf-8
