--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -32,13 +32,13 @@ services:
         FINTERRA_WEB_CONTAINER_APACHE2_DOCUMENT_ROOT: "/var/www/web-app"
         FINTERRA_WEB_CONTAINER_APACHE2_WEB_APP_DIR: "/var/www/web-app"
         FINTERRA_WEB_CONTAINER_APACHE2_CONF_DIR: "/etc/apache2"
+
+        FINTERRA_ESCAPED_APACHE2_DOCUMENT_ROOT_TMP_FILE: "escaped_apache2_document_root_tmp.txt"
     networks:
       fnetwork:
         ipv4_address: 172.19.238.10
     ports:
       - "172.19.238.10:8282:8282"
-      - "172.19.238.10:80:80"
-      - "172.19.238.10:443:443"
 #    environment:
 #      FINTERRA_WEB_CONTAINER_IPv4_HOST: "0.0.0.0"
 #      FINTERRA_WEB_CONTAINER_IPv4_PORT: "8282"
