--- a/docker-compose/Dockerfile
+++ b/docker-compose/Dockerfile
@@ -7,15 +7,14 @@ ARG FINTERRA_WEB_CONTAINER_IPv4_PORT="undefined"
 ARG FINTERRA_WEB_CONTAINER_DEBIAN_OS_LOCALE="undefined"
 ARG FINTERRA_WEB_CONTAINER_DEBIAN_OS_TZ="undefined"
 
-ARG FINTERRA_WEB_CONTAINER_PHP_VERSION="undefined"
-ARG FINTERRA_WEB_CONTAINER_PHP_DATA_DIR="undefined"
-ARG FINTERRA_WEB_CONTAINER_COMPOSER_VERSION="undefined"
-
 ARG FINTERRA_WEB_CONTAINER_APACHE2_DOCUMENT_ROOT="undefined"
 ARG FINTERRA_WEB_CONTAINER_APACHE2_WEB_APP_DIR="undefined"
 ARG FINTERRA_WEB_CONTAINER_APACHE2_CONF_DIR="undefined"
 
-ARG FINTERRA_ESCAPED_APACHE2_DOCUMENT_ROOT_TMP_FILE="undefined"
+ARG FINTERRA_WEB_CONTAINER_COMPOSER_VERSION="undefined"
+
+ARG FINTERRA_WEB_CONTAINER_PHP_VERSION="undefined"
+ARG FINTERRA_WEB_CONTAINER_PHP_DATA_DIR="undefined"
 
 ENV COMPOSER_VERSION=${FINTERRA_WEB_CONTAINER_COMPOSER_VERSION} \
     BUILD_DEPS="software-properties-common" \
@@ -38,10 +37,7 @@ ENV COMPOSER_VERSION=${FINTERRA_WEB_CONTAINER_COMPOSER_VERSION} \
     APACHE2_WEB_APP_DIR=${FINTERRA_WEB_CONTAINER_APACHE2_WEB_APP_DIR} \
     APACHE2_CONF_DIR=${FINTERRA_WEB_CONTAINER_APACHE2_CONF_DIR} \
     #
-    DOCKER_ENTRY_POINT="/sbin/entrypoint.sh" \
-    #
-    ESCAPED_APACHE2_DOCUMENT_ROOT_TMP_FILE=${FINTERRA_ESCAPED_APACHE2_DOCUMENT_ROOT_TMP_FILE} \
-    ESCAPED_DOCUMENT_ROOT_ENTRY_POINT="/sbin/get_escaped_path_from_script.sh"
+    DOCKER_ENTRY_POINT="/sbin/entrypoint.sh"
 
 RUN apt-get update  \
     && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone \
@@ -87,24 +83,12 @@ RUN rm -rf ${APACHE2_CONF_DIR}/envvars
 COPY ./conf/envvars ${APACHE2_CONF_DIR}/envvars
 
 ENV APACHE_CONF_DIR_ENVVARS=${APACHE2_CONF_DIR}/envvars
+RUN unset ESCAPED_APACHE2_DOCUMENT_ROOT_VAR  \
+    && set ${APACHE2_DOCUMENT_ROOT} 's;\/;\\\/;g'  \
+    && /bin/bash -c "ESCAPED_APACHE2_DOCUMENT_ROOT_VAR=${ESCAPED_APACHE2_DOCUMENT_ROOT_VAR:=`echo "$1" | sed "$2"`}"
+
 RUN sed -i "s;#ENV_SERVER_IPv4_HOST#;${APACHE2_IPv4_HOST};g" ${APACHE_CONF_DIR_ENVVARS}
 RUN sed -i "s;#ENV_SERVER_IPv4_PORT#;${APACHE2_IPv4_PORT};g" ${APACHE_CONF_DIR_ENVVARS}
-
-#ENV ESCAPED_APACHE2_DOCUMENT_ROOT_TMP_PATH=${PHP_DATA_DIR}/${ESCAPED_APACHE2_DOCUMENT_ROOT_TMP_FILE}
-#
-#RUN rm -rf ${ESCAPED_APACHE2_DOCUMENT_ROOT_TMP_PATH}  \
-#    && touch ${ESCAPED_APACHE2_DOCUMENT_ROOT_TMP_PATH} \
-#    && echo ${APACHE2_DOCUMENT_ROOT} > ${ESCAPED_APACHE2_DOCUMENT_ROOT_TMP_PATH} \
-#    && sed -i "s;\/;\\\/;g" ${ESCAPED_APACHE2_DOCUMENT_ROOT_TMP_PATH}
-#
-#RUN rm -rf ${ESCAPED_DOCUMENT_ROOT_ENTRY_POINT}
-#COPY ./conf/get_escaped_path_from_script.sh ${ESCAPED_DOCUMENT_ROOT_ENTRY_POINT}
-#RUN chmod +x ${ESCAPED_DOCUMENT_ROOT_ENTRY_POINT}
-#
-#export ESCAPED_APACHE2_DOCUMENT_ROOT_VAR_FROM_SH=$(head -n 1 "$1")
-
-RUN /bin/bash -c "ESCAPED_APACHE2_DOCUMENT_ROOT_VAR="${$ESCAPED_APACHE2_DOCUMENT_ROOT_VAR:-`echo '$APACHE2_DOCUMENT_ROOT' | sed 's;\/;\\\/;g'`}""
-
 RUN sed -i "s;#ENV_SERVER_DOCUMENT_ROOT#;${ESCAPED_APACHE2_DOCUMENT_ROOT_VAR};g" ${APACHE_CONF_DIR_ENVVARS}
 
 RUN rm -rf ${APACHE2_CONF_DIR}/apache2.conf
