--- a/docker-compose/Dockerfile
+++ b/docker-compose/Dockerfile
@@ -83,13 +83,15 @@ RUN rm -rf ${APACHE2_CONF_DIR}/envvars
 COPY ./conf/envvars ${APACHE2_CONF_DIR}/envvars
 
 ENV APACHE_CONF_DIR_ENVVARS=${APACHE2_CONF_DIR}/envvars
-RUN unset ESCAPED_APACHE2_DOCUMENT_ROOT_VAR  \
-    && set ${APACHE2_DOCUMENT_ROOT} 's;\/;\\\/;g'  \
-    && /bin/bash -c "ESCAPED_APACHE2_DOCUMENT_ROOT_VAR=${ESCAPED_APACHE2_DOCUMENT_ROOT_VAR:=`echo "$1" | sed "$2"`}"
+
+#RUN unset ESCAPED_APACHE2_DOCUMENT_ROOT_VAR  \
+#    && set ${APACHE2_DOCUMENT_ROOT} 's;\/;\\\/;g'  \
+#    && /bin/bash -c "ESCAPED_APACHE2_DOCUMENT_ROOT_VAR=${ESCAPED_APACHE2_DOCUMENT_ROOT_VAR:=`echo "$1" | sed "$2"`}" \
+#    && set --
 
 RUN sed -i "s;#ENV_SERVER_IPv4_HOST#;${APACHE2_IPv4_HOST};g" ${APACHE_CONF_DIR_ENVVARS}
 RUN sed -i "s;#ENV_SERVER_IPv4_PORT#;${APACHE2_IPv4_PORT};g" ${APACHE_CONF_DIR_ENVVARS}
-RUN sed -i "s;#ENV_SERVER_DOCUMENT_ROOT#;${ESCAPED_APACHE2_DOCUMENT_ROOT_VAR};g" ${APACHE_CONF_DIR_ENVVARS}
+RUN sed -i "s;#ENV_SERVER_DOCUMENT_ROOT#;${APACHE2_DOCUMENT_ROOT};g" ${APACHE_CONF_DIR_ENVVARS}
 
 RUN rm -rf ${APACHE2_CONF_DIR}/apache2.conf
 COPY ./conf/apache2.conf ${APACHE2_CONF_DIR}/apache2.conf
@@ -108,9 +110,9 @@ EXPOSE ${APACHE2_IPv4_PORT}
 
 RUN rm -rf ${DOCKER_ENTRY_POINT}
 COPY ./conf/entrypoint.sh ${DOCKER_ENTRY_POINT}
-RUN chmod +x ${DOCKER_ENTRY_POINT}
+RUN chmod 777 ${DOCKER_ENTRY_POINT}
 
 WORKDIR ${APACHE2_WEB_APP_DIR}
 
 # By default, simply start apache.
-CMD ["${DOCKER_ENTRY_POINT}"]
+CMD ["/sbin/entrypoint.sh"]
