--- a/docker-compose/conf/yii2-web-app.conf
+++ b/docker-compose/conf/yii2-web-app.conf
@@ -4,13 +4,13 @@
   DocumentRoot ${APACHE2_YII2_FRONTEND_FROM_ROOT_ABSOLUTE_PATH}
   Options +FollowSymLinks
   AddDefaultCharset utf-8
-  DirectoryIndex index.php
+  DirectoryIndex index.html
 
     <Directory ${APACHE2_YII2_FRONTEND_FROM_ROOT_ABSOLUTE_PATH}>
         Options +FollowSymLinks
         AllowOverride None
         AddDefaultCharset utf-8
-        DirectoryIndex index.php
+        DirectoryIndex index.html
         Require all granted
 
         <IfModule mod_rewrite.c>
@@ -26,7 +26,7 @@
 
             RewriteCond %{REQUEST_FILENAME} !-f
             RewriteCond %{REQUEST_FILENAME} !-d
-            RewriteRule . /index.php [L]
+            RewriteRule . /index.html [L]
         </IfModule>
     </Directory>
 </VirtualHost>
@@ -37,13 +37,13 @@
   DocumentRoot ${APACHE2_YII2_BACKEND_FROM_ROOT_ABSOLUTE_PATH}
   Options +FollowSymLinks
   AddDefaultCharset utf-8
-  DirectoryIndex index.php
+  DirectoryIndex index.html
 
     <Directory ${APACHE2_YII2_BACKEND_FROM_ROOT_ABSOLUTE_PATH}>
         Options +FollowSymLinks
         AllowOverride None
         AddDefaultCharset utf-8
-        DirectoryIndex index.php
+        DirectoryIndex index.html
         Require all granted
 
         <IfModule mod_rewrite.c>
@@ -59,7 +59,7 @@
 
             RewriteCond %{REQUEST_FILENAME} !-f
             RewriteCond %{REQUEST_FILENAME} !-d
-            RewriteRule . /index.php [L]
+            RewriteRule . /index.html [L]
         </IfModule>
     </Directory>
 </VirtualHost>
